--- a/app/src/main/res/layout/activity_plantio_view.xml
+++ b/app/src/main/res/layout/activity_plantio_view.xml
@@ -47,13 +47,14 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
-        android:layout_height="681dp"
+        android:layout_height="0dp"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginBottom="1dp"
         android:layout_marginEnd="1dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView2" />
+        app:layout_constraintTop_toBottomOf="@+id/plantioCategoria" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
