--- a/app/src/main/res/layout/activity_receitas_view.xml
+++ b/app/src/main/res/layout/activity_receitas_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/laranja"
-    tools:context=".receitaView">
+    tools:context=".ReceitaView">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
