--- a/app/src/main/res/layout/activity_wizard2.xml
+++ b/app/src/main/res/layout/activity_wizard2.xml
@@ -5,18 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".wizzard.wizard2"
-    android:background="@color/branco">
+    android:background="@color/branco"
+    android:layout_gravity="center">
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="236dp"
         android:src="@drawable/cozinhando"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.483"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.284" />
 
     <TextView
         android:id="@+id/textView3"
@@ -25,6 +27,7 @@
         android:layout_marginTop="20dp"
         android:text="Prepare"
         android:textAlignment="center"
+        android:textStyle="bold"
         android:textColor="@color/laranja"
         android:textSize="24dp"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
@@ -49,7 +52,6 @@
         android:rotation="180"
         android:src="@drawable/btn_next"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
-
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView3"
         app:layout_constraintVertical_bias="0.447" />
