--- a/app/src/main/res/layout/item_planta.xml
+++ b/app/src/main/res/layout/item_planta.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
+    android:id="@+id/cardView_ListaPlanta"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -18,8 +19,10 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:text="Nome Planta"
-        android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textSize="20sp"
+        android:textStyle="bold"
+
+        />
 
 
 </androidx.cardview.widget.CardView>
